--- a/index.html
+++ b/index.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div id="main">
-      <header>
-        <div id="leftHealth">
-          <section id="remainingHealth"></section>
-          <section id="lostHealth"></section>
-        </div>
-        <section id="timer"></section>
-        <div id="rightHealth">
-          <section id="remainingHealth"></section>
-          <section id="lostHealth"></section>
-        </div>
-      </header>
-      <canvas></canvas>
-    </div>
 
-    <script src="./index.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <title>Document</title>
+</head>
+
+<body>
+  <div id="main">
+
+    <header>
+      <div id="leftHealth">
+        <section id="remainingHealth"></section>
+        <section id="lostHealth"></section>
+      </div>
+      <section id="timer">
+        10
+      </section>
+
+      <div id="rightHealth">
+        <section id="remainingHealth"></section>
+        <section id="lostHealth"></section>
+      </div>
+    </header>
+    <div id="announceWinner">Tie</div>
+    <canvas></canvas>
+
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
+    integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="./js/class.js"></script>
+  <script src="./js/utility_func.js"></script>
+  <script src="./index.js"></script>
+</body>
+
 </html>
